# sctt

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/sctt/: __init__.py  __main__.py  app.py  app.tcss  locations.py  utils.py  version.py
src/sctt/fonts/: 7segment_u2588.flf  mono_banner.flf  mono_banner_u2588.flf
src/sctt/modules/: calculate_ao.py  database.py  scramble.py  simulate.py  timer.py
src/sctt/renderables/: cube_display.py  cube_net.py
src/sctt/screens/: ao_screen.py  blocking_screen.py  dialog_screen.py  input_scramble_screen.py  session_manager_screen.py  solve_screen.py
src/sctt/widgets/: cube_net_widget.py  my_datatable.py  my_scrollable_container.py  my_select.py  my_vertical_scroll.py  scramble_widget.py  stats_widget.py  status_widget.py  timer_widget.py
tests/: test_calculate_ao.py  test_database.py  test_simulate.py  test_timer.py
