[project]
name = "sctt"
version = "0.2.1"
description = "SpeedCubeTimer-TUI (sctt)"
readme = "README.md"
authors = [
    { name = "sou-san", email = "sou887867@gmail.com" } 
]
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["sctt", "speed cube timer", "scrambler", "cli", "tui", "terminal", "tool"]
dependencies = [
    "keyboard>=0.13.5",
    "rich>=13.9.4",
    "textual>=0.88.1",
    "textual-pyfiglet>=0.5.5",
]

[project.urls]
Homepage = "https://github.com/sou-san/sctt"
Repository = "https://github.com/sou-san/sctt"
Issues = "https://github.com/sou-san/sctt/issues"
Documentation = "https://github.com/sou-san/sctt/blob/main/README.md"

[project.scripts]
sctt = "sctt.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.0",
    "ruff>=0.6.9",
    "textual-dev>=1.6.1",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 95
target-version = "py312"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "B", # flake8-bugbear
    "I", # isort
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "N", # pep8-naming
    "C901", # mccabe linter (複雑度チェック)
]

ignore = [
    "D103", # docstring が無い関数やクラスを許す
    "E501", # 行あたりの文字数制限を無視する
]
