[project]
name = "sctt"
version = "0.3.1"
description = "SpeedCubeTimer-TUI (sctt)"
readme = "README.md"
authors = [
    { name = "sou-san", email = "sou887867@gmail.com" }
]
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["sctt", "speed cube timer", "scrambler", "cli", "tui", "terminal", "tool"]
dependencies = [
    "keyboard==0.13.5",
    "rich>=13.9.4, <14.0.0",
    "textual>=2.1.2, <3.0.0",
    "textual-pyfiglet==0.5.5",
    "xdg-base-dirs>=6.0.2, <7.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/sou-san/sctt"
Repository = "https://github.com/sou-san/sctt"
Issues = "https://github.com/sou-san/sctt/issues"
Documentation = "https://github.com/sou-san/sctt/blob/main/README.md"

[project.scripts]
sctt = "sctt.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "textual-dev>=1.7.0",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 95
target-version = "py312"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "B", # flake8-bugbear
    "I", # isort
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "N", # pep8-naming
    "C901", # mccabe linter (複雑度チェック)
]

ignore = [
    "D103", # docstring が無い関数やクラスを許す
    "E501", # 行あたりの文字数制限を無視する
]
